fabric/support/test/tests/construct_runtime_ui/conflicting_index_2.stderr
error: Module indices are conflicting: Both modules System and Noble3 are at index 5
 --> $DIR/conflicting_index_2.rs:9:3
  |
9 |         System: system::{} = 5,
  |         ^^^^^^

error: Module indices are conflicting: Both modules System and Noble3 are at index 5
  --> $DIR/conflicting_index_2.rs:12:3
   |
12 |         Noble3: noble3::{},
   |         ^^^^^^^
